--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,9 @@
         android:allowBackup="true"
         android:icon="@mipmap/iconhouse"
         android:label="@string/app_name"
-        android:supportsRtl="true">
-        <activity android:name=".Index">
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
+        <activity android:name=".index">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
