Primera Prueba de WS

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
             android:name=".login"
             android:label="@string/title_activity_login" />
         <activity android:name=".home" />
+        <activity android:name=".Main" />
     </application>
 
 </manifest>
