--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,10 +23,14 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile files('libs/ksoap2-android-2.5.2.jar')
+    compile files('libs/ojdbc6.jar')
     compile 'com.mcxiaoke.volley:library:1.0.+'
 
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
     compile 'com.android.support:support-v4:23.2.1'
+
+
+
 
 }
